# libsharedmemory

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  build.sh  package-lock.json  package.json  test.sh
.github/workflows/: build_and_test.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  lsm_test
example/: CMakeLists.txt  lsm_c.cpp  lsm_c.h  queue.cpp  raw.c  stream.cpp
ffi/go/: Makefile  go.mod  lsm.go  lsm_test.go
ffi/go/examples/shared_memory/: main.go
ffi/rust/: Cargo.toml  Makefile  build.rs
ffi/rust/examples/: shared_memory.rs
ffi/rust/src/: ffi.rs  lib.rs
ffi/zig/: Makefile  build.zig  build.zig.zon
ffi/zig/examples/: shared_memory.zig
ffi/zig/src/: lsm.zig  main.zig
include/libsharedmemory/: libsharedmemory.hpp
test/: CMakeLists.txt  benchmark_contention.cc  test.cc
